--- a/VRChat/85/1009985.html
+++ b/VRChat/85/1009985.html
@@ -107,7 +107,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "NARGopA3bDUvKz+n/9GQJUj1sK4ZWDtOU5eyhC/KF3Y="></script>
+    "W4Hg4wz5ijnnXSfAudPN5aYKcH94j46D0Ue9AjUpb04="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料版あり】こんぺいとう･横幅広めの瓶(マテリアル、テクスチャ無し)【3Dモデル】","description":"【フリーコンテンツ版とブースト用に内容の違いはありません。】\n\n金平糖の3Dモデルです。\n金平糖と、幅が広めの瓶が含まれています。\nテクスチャやマテリアルは含まれていないので、用意して適用してください。\n\nこんぺいとう:△550\n瓶:△1056\n\nこの作品の改編･商用利用･再配布などは自由ですが、このページのURLや紹介をしてくれると喜びます。","url":"https://booth.pm/ja/items/1009985","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8f18265c-b9b0-41cb-9ea6-d9ee3bb3a017/i/1009985/08a6af5c-ad72-4fd3-8a80-7bda246e6df5_base_resized.jpg"}
     </script>
@@ -118,7 +118,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NARGopA3bDUvKz+n/9GQJUj1sK4ZWDtOU5eyhC/KF3Y="></script>
+    nonce="W4Hg4wz5ijnnXSfAudPN5aYKcH94j46D0Ue9AjUpb04="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -466,9 +466,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
