--- a/VRChat/00/1009800.html
+++ b/VRChat/00/1009800.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "MNL5iFCxQBb/4fKkoXyKVqcS9/oIw0/mC+hjsZN//H8="></script>
+    "Lc7hvBS3HuG7uHQ3J2T1PsojjxjDVPiG/cGf1rIScRk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】リアラ","description":"Unity用オリジナルモデル、\n射撃競技銃メーカーE-Zインダストリの広告塔リアラちゃんです。\n\nUnityのHumanoid形式に対応したモデルデータ(主にVRChat向けを想定)を格納しています。\nパーツ分けされたpsdファイルを同梱しているため色変えや模様入れ等でお楽しみいただけます。\n\n動画・画像・ゲーム・VRアバター等、営利非営利問わず利用いただけます。\n\n■一部髪飾りのウェイトを修正しました。\n■全体的にウェイトを修正しました。","url":"https://booth.pm/ja/items/1009800","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/27054d27-6907-43b6-8fda-e7b408e9f7ab/i/1009800/98355760-f046-4c68-ae00-5bc143ee0552_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MNL5iFCxQBb/4fKkoXyKVqcS9/oIw0/mC+hjsZN//H8="></script>
+    nonce="Lc7hvBS3HuG7uHQ3J2T1PsojjxjDVPiG/cGf1rIScRk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -446,9 +446,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
