--- a/VRChat/09/1009509.html
+++ b/VRChat/09/1009509.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "7pVMvtHj+Bxd7LtSVYfSLEFYmCZrI2reCzYb19ajdAw="></script>
+    "p+5+6aYyzM3WTwsVPngJSe86wlKtZ2+mLKEQmt9Xv2w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「本日の主役」タスキ(VRChat想定)","description":"よくある「本日の主役」のタスキです。\nジョークグッズなので、軽い気持ちでご利用ください。\nまた、UVマップを同梱しているのでお好きなタスキを作ることができます。\n\n2021/5/5\n・ボーンを入れました。\n・シェイプキーで胸・おなか・おしり・スカートの部分を膨らませることができるようになりました。\nこれにより、ある程度の貫通を防止できるようになりました。また、アバターにも着せやすくなりました。\n\n・Arktoonシェーダーを同梱しました。\n・規約にVN3ライセンス（ https://www.vn3.org/ ）のテンプレートを使用しました。それに伴い、利用規約が変更となりました。\nダウンロード済の方もご確認ください。","url":"https://booth.pm/ja/items/1009509","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/2a1d68f2-987f-4432-b142-5cbae38f36da/i/1009509/e540ecb5-7b17-4409-9774-f649dab926ef_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7pVMvtHj+Bxd7LtSVYfSLEFYmCZrI2reCzYb19ajdAw="></script>
+    nonce="p+5+6aYyzM3WTwsVPngJSe86wlKtZ2+mLKEQmt9Xv2w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -417,9 +417,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
