--- a/VRChat/85/1007985.html
+++ b/VRChat/85/1007985.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "FRPlRAOcIlfK7HUylG1OPW8ugExHvOd29/Zxb6e+/IA="></script>
+    "BiWsNcKUkz+Z8Q+ouINWFWPE3VutkxZKeRzv8nSa1to="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"プリン【３Dモデル】","description":"【説明】\nプリンの3Dモデルです。\nリアルな質感で存在感のある仕上がりになりました。\nVRCで食べたり食べさせあったりするのにいかがでしょうか。\nBoneが入っているのでDynamicBoneなどのコンポーネントをつけることでぷるぷるさせることができます。\n（DynamicBoneは付属していません）\n\n三角面：1510\n\n【ファイル内容】\n・fbxファイル\n・テクスチャ\n・unitypackageファイル\n・Dynamicboneおすすめ設定サンプル画像\n\n【利用について】\n・この商品を主体とする再配布を除き、商用・非商用問わずいかなる用途にもお使いいただけます。\n\n---------------------------------------------------------\n\n実際にぷるぷるさせてる動画も御覧ください！\n↓↓↓↓↓↓\n\n","url":"https://booth.pm/ja/items/1007985","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/12d291ee-7368-4fb1-bc8b-4bf670ee558a/i/1007985/6ecbd8c7-594a-47cd-a9c4-36c0f39efd71_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FRPlRAOcIlfK7HUylG1OPW8ugExHvOd29/Zxb6e+/IA="></script>
+    nonce="BiWsNcKUkz+Z8Q+ouINWFWPE3VutkxZKeRzv8nSa1to="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -487,9 +487,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
