--- a/VRChat/75/1008975.html
+++ b/VRChat/75/1008975.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "EzTF0QjA303HsGK0nJOwM97DODRiLYenB2zS1611vCQ="></script>
+    "K6NIKNUNU58rMF8Jq2BBsycu2L2tydKCHThcqU9JG5Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料DL可】３Dモデル：かぼちゃヘッドギア","description":"この商品はVRchat向けのアクセサリとして作成した3Dモデルです。\n頭に被ることを想定したモデルですが、他にも飾り付けの一つに流用するなど、お好きな場所に設置してお使いください。\nハロウィンはもちろん、その他コミカルなホラーテイストの制作に使えます。\n\n本商品はblenderで作成し、Unityでの使用を想定して作られたモデルとなります。\n本商品のデータを使用したことで問題が発生した場合、作者は一切責任をとりません。","url":"https://booth.pm/ja/items/1008975","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ecbe906e-dd0a-4826-9b04-0f8a857c3ac0/i/1008975/b7e670bd-34e2-4f5f-a418-5584a28b91ca_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EzTF0QjA303HsGK0nJOwM97DODRiLYenB2zS1611vCQ="></script>
+    nonce="K6NIKNUNU58rMF8Jq2BBsycu2L2tydKCHThcqU9JG5Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -472,9 +472,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
