--- a/VRChat/79/1008479.html
+++ b/VRChat/79/1008479.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "PSFAQtYDuFnxbGBMHA4vAjvI5YWxCB8TSxXmw2sM1J0="></script>
+    "jf/r59PJtQjBeuwtfDuORy6HF/8xwmpF5CwPCSqj7hA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】かぼちゃ帽子","description":"ハロウィンの季節なのでかぼちゃ帽子を作りました。\nTwitterで見かける https://icondecotter.jp/detail.php?id=16067 これの3D化です。VRC等にどうぞ。\n\n中身\n・本体(.fbx)△1646verと△920ver\n・テクスチャ(.png)1024px正方形\n・emission用画像(.png)1024px正方形\n・サンプル画像\n\n△1646のバージョンと△920のバージョンがあります。お好きな方をお使いください。(920はちょっとだけカクカクして見えるかも)\n\n改変OK 再配布はNGです。\n\nVtuber動画などでモデルに被せてもOKです。(宣伝してくれると嬉しいです ※しなくてもOK)\n\n支援用用意しました。ご自由にどうぞ 支援してくれたら喜びます。\n","url":"https://booth.pm/ja/items/1008479","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/3cf237e9-13f2-4907-bb4e-e5cb6a405910/i/1008479/a1676063-72d0-4a8a-b74e-d7e28b844077_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PSFAQtYDuFnxbGBMHA4vAjvI5YWxCB8TSxXmw2sM1J0="></script>
+    nonce="jf/r59PJtQjBeuwtfDuORy6HF/8xwmpF5CwPCSqj7hA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -464,9 +464,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
