--- a/VRChat/12/1008312.html
+++ b/VRChat/12/1008312.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/3W+EgllfPC/1eqE/+qf/J9aUWhxpdie87DBzJah60U="></script>
+    "Jf3kmyD2kGOsuiOE6GxX+j8KZwNjd56JHpaqZ+Dierk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　アクセサリー　手鏡","description":"VRChat向けアクセサリー　手鏡になります。\n\n■ポリゴン数：468\n\n【内容】\n\n■HandMirror.UnityPackage\n■readme.txt\n■チュートリアル画像\n\n導入、使用方法はreadmeとチュートリアルを画像で用意しておりますのでそちらを必ず読んで導入してください。\n\nテクスチャ-ではなくマテリアルを設定していますので好きなカラーに変えてお使いください。\n\n制作者:をたぱち\nhttps://twitter.com/_4kikn ご不明な点などございましたら気軽に連絡いただけますと幸いです。","url":"https://booth.pm/ja/items/1008312","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/a1e47a5c-c994-4f91-9f96-57dc100ca505/i/1008312/ecb657c1-c8b3-42d0-8a86-3d561be0d030_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/3W+EgllfPC/1eqE/+qf/J9aUWhxpdie87DBzJah60U="></script>
+    nonce="Jf3kmyD2kGOsuiOE6GxX+j8KZwNjd56JHpaqZ+Dierk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -377,9 +377,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
